--- a/style.css
+++ b/style.css
@@ -18,8 +18,9 @@
 
 header {
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   background-image: url(./resources/v904-nunny-0121.png);
+
   /* text-align: center; */
 }
 .text-side {
@@ -28,13 +29,13 @@ header {
 }
 .image-positon {
   display: flex;
-  width: 406px;
+  /* width: 406px; */
   padding-top: 73px;
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  width: 406px;
-  height: 998px;
+  width: -500px;
+  height: 1000px;
 }
 .text-lable {
   color: #1e046a;
@@ -96,4 +97,32 @@ header {
   font-style: normal;
   font-weight: 500;
   line-height: 24px; /* 171.429% */
+}
+.bold {
+  color: #000;
+  font-family: Montserrat;
+  font-size: 29px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 10px;
+}
+.sub-back {
+  background: #adc2d7;
+}
+.mac-back {
+  background: #ededed;
+}
+.mac-positon {
+  /* display: flex;
+  width: 829px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: absolute; */
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  display: flex;
+  right: -537px;
+  top: 49px;
 }
