--- a/style.css
+++ b/style.css
@@ -34,8 +34,8 @@ header {
   flex-direction: column;
   justify-content: flex-end;
   align-items: center;
-  width: -500px;
-  height: 1000px;
+  width: 50px;
+  height: 700px;
 }
 .text-lable {
   color: #1e046a;
@@ -125,4 +125,178 @@ header {
   display: flex;
   right: -537px;
   top: 49px;
+}
+.category {
+  background: #c4c3c3;
+  display: flex;
+  width: 200px;
+  height: 160px;
+  min-width: 135px;
+  padding: 24px 52px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+.category_list {
+  display: flex;
+  align-items: flex-start;
+  align-content: flex-start;
+  gap: 16px 32px;
+  align-self: stretch;
+}
+.product_title {
+  color: var(--main-black, #000);
+  text-align: center;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 32px; /* 177.778% */
+}
+.productsMenu {
+  display: flex;
+  align-items: center;
+  gap: 80px;
+  align-self: stretch;
+}
+.product_subtext {
+  color: #8b8b8b;
+  text-align: center;
+  font-family: Montserrat;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 32px; /* 177.778% */
+}
+.Card {
+  display: flex;
+  min-width: 200px;
+  padding: 24px 16px;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  flex: 0.25 0 0;
+  border-radius: 9px;
+  background: #f6f6f6;
+}
+.productDescriptionTitle {
+  color: var(--main-black, #000);
+  text-align: center;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 24px; /* 150% */
+}
+.productDescriptionPrice {
+  color: var(--main-black, #000);
+  text-align: center;
+  font-family: Montserrat;
+  font-size: 24px;
+  font-style: italic;
+  font-weight: 700;
+  line-height: 24px; /* 100% */
+  letter-spacing: 0.72px;
+}
+.bottonProperty {
+  display: flex;
+  padding: 12px 64px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+.cardHolder {
+  display: flex;
+  min-width: 200px;
+  align-items: flex-start;
+  align-content: flex-start;
+  gap: 16px;
+  flex: 1 0 0;
+  flex-wrap: wrap;
+}
+.saleBackground {
+  background: #958ad4;
+}
+.imgset {
+  width: 421px;
+  height: 342px;
+  flex-shrink: 0;
+  object-position: -140px 0;
+}
+.sales-title {
+  color: #25177b;
+  text-align: center;
+  font-family: Montserrat;
+  font-size: 72px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 72px; /* 100% */
+  letter-spacing: -0.72px;
+  margin-top: 20%;
+  margin-left: 30%;
+}
+.sales-title1 {
+  color: #fff;
+  font-family: Montserrat;
+  font-size: 72px;
+  font-style: normal;
+  font-weight: 900;
+  line-height: 72px;
+  letter-spacing: -0.72px;
+  margin-top: 20%;
+}
+.saleDescribtion {
+  color: #fff;
+  text-align: center;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px; /* 200% */
+  margin-left: 30%;
+}
+.sales {
+  text-align: center;
+}
+.imgset1 {
+  width: 421px;
+  height: 342px;
+  flex-shrink: 0;
+  margin-left: 50%;
+}
+.footer {
+  display: flex;
+  /* width: 1439px; */
+  padding: 104px 160px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 24px;
+  background: #0e071b;
+}
+.footerIcon {
+  display: flex;
+  width: 173px;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.list {
+  color: #cfcfcf;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 32px; /* 228.571% */
+}
+.titleFooter {
+  color: var(--main-white, #fff);
+  font-family: Montserrat;
+  font-size: 16px;
+  font-style: italic;
+  font-weight: 80;
+  line-height: 16px; /* 100% */
+}
+
+@media only screen and( max-width: 425px) {
 }
